--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -17,6 +17,21 @@
   font-family: 'Noto', sans-serif;
 }
 
+.loading-layer {
+  background-color: #000000bf;
+  position: absolute;
+  z-index: 1;
+  border-radius: 5px;
+  opacity: 0;
+  padding: 5px;
+  transition: 1s;
+}
+
+.loading-on {
+  opacity: 1;
+  padding: 10;
+}
+
 .global-container {
   width: 100%;
   display: flex;
@@ -30,14 +45,13 @@
   height: 100%;
 }
 
-.quran-container img {
-  max-width: calc(100% + 92px);
+.quran-container canvas {
+  max-width: 100%;
   z-index: 0;
   object-fit: contain;
   /* filter:
   invert(1); */
   max-height: 100%;
-  margin-right: -92px;
 }
 
 .quran-container {
@@ -51,7 +65,9 @@
   max-width: 100%;
   overflow: hidden;
   display: flex;
+  position: relative;
   justify-content: center;
+  align-items: center;
 }
 
 .main-menu {
