--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -457,8 +457,7 @@ body::-webkit-scrollbar {
 }
 
 .raw-selected {
-  background-color: #4359c1 !important;
-  color: #fff;
+  background-color: #9aadff !important;
 }
 
 
