--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -17,6 +17,14 @@
   font-family: 'Noto', sans-serif;
 }
 
+[title] {
+ cursor: help; 
+}
+
+button {
+  outline: 0;
+}
+
 :root{
   --absBackGroundColor: #6c6c6c;
   --backGroundColor: #dddcd9;
@@ -70,8 +78,8 @@
   max-width: 100%;
   z-index: 0;
   object-fit: contain;
-  /* filter: contrast(0.5); */
   max-height: 100%;
+  transition: all 0.1s;
 }
 
 .quran-container {
@@ -160,7 +168,7 @@ main.main {
 }
 
 .left-sidebar,.right-sidebar {
-  width: 300px;
+  width: 370px;
   /* color: #fff; */
   padding: 5px;
   border-radius: 5px;
@@ -177,6 +185,7 @@ main.main {
   padding: 5px;
   /* border-bottom: 1px solid var(--headingsBGC); */
   color: #000;
+  /* border-bottom: 0px solid #6c6c6c; */
 }
 
 .tool-actions {
@@ -224,7 +233,7 @@ main.main {
   width: 100%;
   border-radius: 5px;
   display: flex;
-  padding: 0 10px;
+  padding: 0px 5px;
   justify-content: center;
   align-items: center;
 }
@@ -233,18 +242,25 @@ main.main {
   flex: 1;
   display: flex;
   justify-content: space-between;
+  height: calc(100% - 10px);
 }
 
 .main-navigation > div > div {
   display: flex;
+  gap: 4px;
 }
 
 .main-navigation input {
   width: 100%;
   padding: 0px 5px;
-  margin: 0 6px;
+  margin: 0 0px;
   text-align: center;
-  height: 33px;
+  height: 100%;
+  border: 0;
+  border-top: 1px solid #6c6c6c;
+  border-radius: 0;
+  border-bottom: 1px solid #6c6c6c;
+  outline: 0;
 }
 
 .main-navigation svg {
@@ -255,16 +271,19 @@ main.main {
 }
 
 .main-navigation button {
-  height: 33px;
-  padding: 0 10px;
+  height: 100%;
+  padding: 0 5px;
+  min-width: 30px;
   line-height: 23px;
   align-content: center;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 0;
+  border: 1px solid #6c6c6c;
 }
 
-.main-navigation-r-menu, .main-navigation-l-menu {
+.main-navigation-r-menu, .main-navigation-l-menu #left-menu-button {
   display: none !important;
 }
 
@@ -274,7 +293,7 @@ main.main {
   }
   .left-sidebar {
     position: absolute;
-    background-color: #0000008c;
+    background-color: #dddcd9;
     border-radius: 5px;
     z-index: 0;
     left: 5px;
@@ -286,7 +305,7 @@ main.main {
     padding-left: 0;
   }   */
     
-  .main-navigation-l-menu {
+  .main-navigation-l-menu #left-menu-button {
     display: flex !important;
   }
 
@@ -338,7 +357,7 @@ main.main {
   border-end-start-radius: 0;
   }
 
-  .main-navigation-l-menu {
+  .main-navigation-l-menu #left-menu-button {
     display: none !important;
   }
 
@@ -384,11 +403,11 @@ main.main {
 }
 
 .open-left-desktp {
-  left: 5px;
-  top: 5px;
   width: 300px;
   z-index: 1;
   opacity: 1;
+  background-color: #6c6c6c;
+  /* height: calc(100% - 43px); */
 }
 
 /* --------------------------------------------------------------------------------------- */
@@ -410,8 +429,8 @@ main.main {
   /* width: 70px;
   min-width: 70px;
   max-width: 70px; */
-  width: 30%;
-  min-width: 30%;
+  width: 25%;
+  min-width: 15%;
   max-width: 30%;
 }
 
@@ -435,6 +454,7 @@ main.main {
 
 .imam button {
   padding: 5px;
+  line-height: 1.8em;
   width: 100%;
   height: 100%;
   border: 0;
@@ -444,9 +464,9 @@ main.main {
 .imam button[disabled] {
   background: repeating-linear-gradient(135deg, var(--headingsBGC) 0, var(--headingsBGC) 6%, transparent 0, transparent 50%);
   background-size: 1em 1em;
-  background-color: var(--backGroundColor);
+  background-color: #6c6c6c80;
   opacity: 1;
-  color: #1c1c1c;
+  color: #000000;
 }
 .imam-sub::-webkit-scrollbar {
   display: none;
@@ -457,7 +477,7 @@ body::-webkit-scrollbar {
 }
 
 .raw-selected {
-  background-color: #9aadff !important;
+  background-color: #b796e7!important;
 }
 
 
@@ -498,7 +518,7 @@ body::-webkit-scrollbar {
   font-family: tahoma;
   width: 100%;
   text-align: right;
-  /* border: 0; */
+  border: 1px solid #6c6c6c;
   outline: 0;
   direction: rtl;
 }
@@ -515,13 +535,12 @@ body::-webkit-scrollbar {
 }
 
 .searchbox > .results > div {
-  background-color: var(--headingsBGC);
   margin-left: 5px;
-  padding: 5px;
+  /* padding: 5px; */
   color: #000;
   text-align: right;
   margin-bottom: 5px;
-  border-radius: 3px;
+  /* border-radius: 3px; */
 }
 
 .result-selected {
@@ -531,7 +550,10 @@ body::-webkit-scrollbar {
 .results p {
   font-size: 14px;
   line-height: 1.5em;
-  padding: 6px 0;
+  padding: 6px;
+  border: 1px solid #303030;
+  border-bottom: 0;
+  margin-bottom: -4px;
 }
 
 .results span {
@@ -543,6 +565,7 @@ body::-webkit-scrollbar {
   font-size: 14px;
   border: 1px solid #303030;
   width: 100%;
+  margin-top: 0;
 }
 
 /**/
@@ -581,7 +604,7 @@ body::-webkit-scrollbar {
 .filter_filter > * > * {
   width: calc(100% + 3px);
   height: 100%;
-  /* border: 0; */
+  border: 1px solid #6c6c6c;
   outline: 0;
   padding: 5px;
   font-family: tahoma;
@@ -597,7 +620,7 @@ body::-webkit-scrollbar {
   border: 0;
   outline: 0;
   margin-top: 5px;
-  padding-left: 5px;
+  /* padding-left: 5px; */
   height: calc(100% - 70px);
   overflow-y: auto;
 }
@@ -609,23 +632,20 @@ option  {
   padding: 2px 5px;
 }
 option[data-part="juza"] {
-  background-color: #00000075;
+  background-color: #9985b591;
   padding: 0px 5px;
-  color: #fff;
   margin-bottom: 2px;
 }
 option[data-part="hizb"] {
-  background-color: #0000003b;
+  background-color: #9985b54a;
   margin-bottom: 1px;
   padding: 0 5px;
-  color: #e1e1e1;
 }
 option[data-part="fahrs"] {
   padding: 0 5px;
-  color: #fff !important;
-  border: 1px solid #000;
+  /* color: #fff !important; */
   margin-bottom: 3px;
-  background-color: #000;
+  background-color: #9985b5eb;
 }
 
 
@@ -661,10 +681,15 @@ option:checked {
 }
 
 .expanded {
-  left: 0;
-  width: 100%;
+  left: 0.5%;
+  width: calc(100% - 1%);
   max-width: 100%;
   aspect-ratio: 2 / 3.16;
+  transition: all 0.5s;
+}
+
+.night {
+  filter: invert(1);
 }
 
 .quran>div {
