--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -218,7 +218,7 @@ main.main {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 2px 0;
+  margin: 4px 0px;
 }
 
 .tool {
@@ -485,7 +485,7 @@ main.main {
   display: flex;
   justify-content: center;
   gap: 2px;
-  overflow-x: scroll;
+  overflow: hidden;
 }
 
 
