--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -641,7 +641,6 @@ body::-webkit-scrollbar {
   max-height: calc(100% - 43px);
   height: calc(100% - 43px);
   overflow-y: scroll;
-  /* margin: var(--spacing) 1px 0 1px; */
 }
 
 .searchbox>.results>div:last-child {
@@ -649,12 +648,9 @@ body::-webkit-scrollbar {
 }
 
 .searchbox>.results>div {
-  margin-left: var(--spacing);
   /* padding: var(--spacing); */
   color: #000;
-  text-align: right;
   margin-top: var(--spacing);
-  /* border-radius: 3px; */
 }
 
 .result-selected {
@@ -668,6 +664,7 @@ body::-webkit-scrollbar {
   border: 1px solid #757575;
   border-bottom: 0;
   margin-bottom: -4px;
+  border-radius: var(--spacing) var(--spacing) 0 0;
 }
 
 .results span {
@@ -680,6 +677,7 @@ body::-webkit-scrollbar {
   border: 1px solid #6c6c6c;
   width: 100%;
   margin-top: 0;
+  border-radius: 0 0 var(--spacing) var(--spacing);
 }
 
 /**/
